@@ -30,30 +30,7 @@
 require_once("libs/paloSantoGrid.class.php");
 require_once("libs/Agentes.class.php");
 
-if (!function_exists('_tr')) {
-    function _tr($s)
-    {
-        global $arrLang;
-        return isset($arrLang[$s]) ? $arrLang[$s] : $s;
-    }
-}
-if (!function_exists('load_language_module')) {
-    function load_language_module($module_id, $ruta_base='')
-    {
-        $lang = get_language($ruta_base);
-        include_once $ruta_base."modules/$module_id/lang/en.lang";
-        $lang_file_module = $ruta_base."modules/$module_id/lang/$lang.lang";
-        if ($lang != 'en' && file_exists("$lang_file_module")) {
-            $arrLangEN = $arrLangModule;
-            include_once "$lang_file_module";
-            $arrLangModule = array_merge($arrLangEN, $arrLangModule);
-        }
-
-        global $arrLang;
-        global $arrLangModule;
-        $arrLang = array_merge($arrLang,$arrLangModule);
-    }
-}
+require_once "modules/agent_console/libs/elastix2.lib.php";
 
 function _moduleContent(&$smarty, $module_name)
 {
@@ -362,6 +339,8 @@ function formEditAgent($pDB, $smarty, $module_name, $local_templates_dir, $id_ag
         return '';
     }
 
+    $smarty->assign('FRAMEWORK_TIENE_TITULO_MODULO', existeSoporteTituloFramework());
+
     // Leer los datos de la campaña, si es necesario
     $arrAgente = NULL;
     $oAgentes = new Agentes($pDB);
@@ -458,6 +437,7 @@ function formEditAgent($pDB, $smarty, $module_name, $local_templates_dir, $id_ag
         }
     }
 
+    $smarty->assign('icon', 'images/user.png');
     $contenidoModulo = $oForm->fetchForm(
         "$local_templates_dir/new.tpl", 
         is_null($id_agent) ? _tr("New agent") : _tr('Edit agent').' "'.$_POST['description'].'"',
