@@ -6,9 +6,10 @@
   and report additional information in case of failure.
 * Dialer (ECCP): add check for failure to list extensions in loginagent request
 * CallCenter Configuration, Campaigns Out, Do not Call List, Agent Console, 
-  Clients, Campaign In: 
+  Clients, Campaign In, Agents: 
   fix title display under elastixneo theme
-* CallCenter Configuration, Campaigns Out: Do not Call List, Clients, Campaign In:
+* CallCenter Configuration, Campaigns Out: Do not Call List, Clients, Campaign In, 
+  Agents:
   import elastix2.lib.php instead of defining functions _tr and load_language_module
 * Do not Call List: convert module to use of _tr
 * Agent Console: add new function to check whether framework contains support
